# A-CAT

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build_script.py  pyproject.toml  test-build.sh
.github/workflows/: build-executables.yml  python-app.yml
docs/: introduction.md
src/acat/: __main__.py  main.py  pyinstaller.py
src/acat/backend/: judge_score.py  praat_score_judging_japanese.py
src/acat/ui/: ModelChooser.py  __init__.py  audio_file.py  content_view.py  help_window.py  main_window.py  result_popup.py  rubrics.py  start.py  subwindow.py
